crates/astroforge-ir/tests/snapshots/snapshot_component__builtin_element_with_static_attr_and_text_child.snap
---
source: crates/astroforge-ir/tests/snapshot_component.rs
expression: node
---
{
  "kind": "element",
  "value": {
    "tag": "div",
    "is_component": false,
    "attrs": {
      "class": {
        "kind": "static",
        "value": "title"
      }
    },
    "events": {},
    "children": [
      {
        "kind": "text",
        "value": "Hello"
      }
    ]
  }
}
