crates/astroforge-ir/tests/snapshots/snapshot_component__custom_component_with_mixed_attrs_and_event.snap
---
source: crates/astroforge-ir/tests/snapshot_component.rs
expression: node
---
{
  "kind": "element",
  "value": {
    "tag": "AvatarCard",
    "is_component": true,
    "attrs": {
      "name": {
        "kind": "dynamic",
        "value": {
          "path": "user.name",
          "is_callable": false
        }
      },
      "color": {
        "kind": "static",
        "value": "#E91E63"
      }
    },
    "events": {
      "cardtap": {
        "path": "onCardTap",
        "is_callable": true
      }
    },
    "children": []
  }
}
