crates/astroforge-ir/tests/snapshots/snapshot_component__expression_text_interpolation.snap
---
source: crates/astroforge-ir/tests/snapshot_component.rs
expression: node
---
{
  "kind": "expression",
  "value": {
    "path": "message",
    "is_callable": false
  }
}
