crates/astroforge-ir/tests/snapshots/snapshot_component__fragment_with_siblings.snap
---
source: crates/astroforge-ir/tests/snapshot_component.rs
expression: node
---
{
  "kind": "fragment",
  "value": [
    {
      "kind": "text",
      "value": "A"
    },
    {
      "kind": "text",
      "value": "B"
    }
  ]
}
